# ktp-launcher-kded

./: CMakeLists.txt  kded-telepathy-launcher.cpp  kded-telepathy-launcher.h  telepathy_launcher.desktop
